--- a/views/footer.html
+++ b/views/footer.html
@@ -10,7 +10,7 @@
                         <li><a href="#/imageconsulting" title="Image Consulting">Image Consulting</a></li>
                         <li><a href="#successstories" title="Success Stories">Success Stories</a></li>
                         <li><a href="#/news" title="News">News</a></li>
-                        <li><a href="#/blog" title="Blog">Blog</a></li>
+                        <li><a href="" title="Blog">Blog (Coming Soon)</a></li>
                         <li><a href="#contactus" title="Contact">Contact</a></li>
                     </ul>
                 </div>
@@ -52,9 +52,9 @@
                     <h5 class="brand-primary-lighter">HEALTH KIT</h5>
                     <div class="submenu text-uppercase">
                         <ul>
-                            <li><a href="#/knowyourstats" title="Calorie Meter">CALORIE METER</a></li>
-                            <li> <a href="#/recipes" title="Recipes">RECIPES</a></li>
-                            <li><a href="#/" title="Restaurant Menus">RESTAURANT MENUS</a></li>
+                            <li><a href="" title="Calorie Meter">CALORIE METER <span class="white" style="font-size:10px">(Coming Soon)</span></a></li>
+                            <li> <a href="" title="Recipes">RECIPES <span class="white" style="font-size:10px">(Coming Soon)</span></a></li>
+                            <li><a href=""title="Restaurant Menus">RESTAURANT MENUS <span class="block white" style="font-size:10px">(Coming Soon)</span></a></li>
                         </ul>
                     </div>
                 </div>
