--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -12,8 +12,8 @@
               <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
           </div>
       <h3 class="text-uppercase brand-brown-dark letter-space font-semibold">Items you would like to purchase</h3>
-      <div class="text-center" ng-if="allcart.length<=0">
-        Your cart is empty
+      <div class="text-center" ng-if="msg!=''">
+        {{msg}}
       </div>
       <div class="cart-table">
         <table class="table" ng-if="allcart.length > 0">
