--- a/views/content/account.html
+++ b/views/content/account.html
@@ -138,7 +138,7 @@
             </div>
           </uib-tab>
           <uib-tab>
-            <uib-tab-heading><span class="text-uppercase">order list</span></uib-tab-heading>
+            <uib-tab-heading><span class="text-uppercase" ui-sref="profile">order list</span></uib-tab-heading>
             <div class="relate no-plan" ng-if="orders==''">
               <h3 class="get-center brand-brown-dark">No Orders</h3>
             </div>
