--- a/views/content/plans.html
+++ b/views/content/plans.html
@@ -11,7 +11,7 @@
       <div class="account-tab">
         <uib-tabset>
           <uib-tab>
-            <uib-tab-heading><span class="text-uppercase" ui-sref="account">my profile</span></uib-tab-heading>
+            <uib-tab-heading><span class="text-uppercase pointer" ui-sref="account">my profile</span></uib-tab-heading>
             <div class="profile-tab">
               <h3 class="text-uppercase brand-brown-dark letter-space">your details</h3>
               <form action="" name="basicForm" class="form-inline details">
@@ -138,7 +138,7 @@
             </div>
           </uib-tab>
           <uib-tab>
-            <uib-tab-heading><span class="text-uppercase" ui-sref="orderlist">order list</span></uib-tab-heading>
+            <uib-tab-heading><span class="text-uppercase pointer" ui-sref="orderlist">order list</span></uib-tab-heading>
             <div class="relate no-plan" ng-if="orders==''">
               <h3 class="get-center brand-brown-dark">No Orders</h3>
             </div>
@@ -189,7 +189,7 @@
             </div>
           </uib-tab>
           <uib-tab>
-            <uib-tab-heading><span class="text-uppercase" ui-sref="plans">My Plans</span></uib-tab-heading>
+            <uib-tab-heading><span class="text-uppercase tab-active pointer" ui-sref="plans">My Plans</span></uib-tab-heading>
             <div class="relate no-plan" ng-if="orders==''">
               <h3 class="get-center brand-brown-dark">No Orders</h3>
             </div>
