--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -285,16 +285,28 @@
                   </thead>
                   <tbody>
                     <tr class="text-center letter-space font-semibold" ng-repeat="product in allcart | orderBy:'id'">
-                      <td>
-                        <figure>
+                      <td ng-if="product.status==3">
+                        <h4 class="text-capitalize plan-name m-center">{{product.subtype}}</h4>
+                        <h5 class="text-capitalize">
+                          <span class="block" ng-if="product.months == '1'">{{product.months}} month</span>
+                          <span class="block" ng-if="product.months != '1'">{{product.months}} months</span>
+                          <span ng-if="product.plan==1">Silver Plan</span>
+                          <span ng-if="product.plan==2">Gold Plan</span>
+                          <span ng-if="product.plan==3">Platinum Plan</span>
+                          <span ng-if="product.plan==4">Diamond Plan</span>
+                        </h5>
+                      </td>
+                      <td ng-if="product.status!=3">
+                        <figure  class="pointer" ui-sref="productdetail({id:product.id})">
                           <div class="cart-imgholder m-center">
-                            <img ng-src="{{product.image | serverimage}}" class="img-responsive round">
+                          <img ng-src="{{product.image | serverimage}}" class="img-responsive round">
                           </div>
                           <figcaption class="text-center text-uppercase">{{product.options.realname}}</figcaption>
                         </figure>
                       </td>
                       <td>
-                        <input type="number" class="text-center quantity" name="" id="" value="{{product.qty}}" disabled>
+                        <input type="number" class="text-center quantity" ng-if="product.status!=3" name="" id="" value="{{product.qty}}" disabled>
+                        <input type="number" class="text-center quantity" ng-if="product.status==3" min="0" disabled value="1">
                         <div class="text-center" ng-show="product.exceeds">Quantity unavailable.</div>
                         <!-- <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
                         <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span> -->
@@ -306,8 +318,9 @@
                       </td>
                       <td>
                         <div class="cart-total-amount">
-                          <p>RS. {{product.subtotal}}</p>
-                        </div>
+                          <p ng-if="product.status!=3">RS. {{product.subtotal}}</p>
+                        <p ng-if="product.status==3">RS. {{product.price}}</p>
+                      </div>
                         <!-- <div class="remove text-right">
                           <button class="btn btn-primary text-uppercase no-radius">Remove</button>
                         </div> -->
