--- a/views/content/wentwrong.html
+++ b/views/content/wentwrong.html
@@ -5,7 +5,7 @@
         <img ng-src="img/ohno.png" class="img-responsive m-center" />
       </div>
       <h3 class="text-uppercase ty-detail brand-brown-dark letter-space text-bold">Transaction id:</h3>
-      <span class="text-uppercase transaction btn btn-primary letter-space">FU64354655</span>
+      <span class="text-uppercase transaction btn btn-primary letter-space">{{order.transactionid}}</span>
 
       <h3 class="text-uppercase brand-brown-dark letter-space text-bold process">Your order could not be processed</h3>
       <a href="#/healthproducts/1" class="text-uppercase btn btn-primary letter-space">Continue Shopping</a>
