--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1338,6 +1338,7 @@ button {
       }
     }
   }
+  .plan-cart { height: 273px !important; }
   .coupon {
     padding: 10px;
     border-top: 1px solid $brand-primary;
