--- a/views/footer.html
+++ b/views/footer.html
@@ -54,7 +54,7 @@
                         <ul>
                             <li><a href="" title="Calorie Meter">CALORIE METER <span class="white" style="font-size:10px">(Coming Soon)</span></a></li>
                             <li> <a href="" title="Recipes">RECIPES <span class="white" style="font-size:10px">(Coming Soon)</span></a></li>
-                            <li><a href=""title="Restaurant Menus">RESTAURANT MENUS <span class="block white" style="font-size:10px">(Coming Soon)</span></a></li>
+                            <li><a href=""title="Restaurant Menus">RESTAURANT MENUS <span class="block white" style="font-size:10px",padding-left="10px">(Coming Soon)</span></a></li>
                         </ul>
                     </div>
                 </div>
