--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -27,16 +27,18 @@
           </thead>
           <tbody>
             <tr class="text-center letter-space font-semibold" ng-repeat="product in allcart | orderBy:'id'">
-              <td ng-if="product.status==3">
-                <h4 class="text-capitalize plan-name m-center">{{product.subtype}}</h4>
-                <h5 class="text-capitalize">
-                  <span class="block" ng-if="product.months == '1'">{{product.months}} month</span>
-                  <span class="block" ng-if="product.months != '1'">{{product.months}} months</span>
-                  <span ng-if="product.plan==1">Silver Plan</span>
-                  <span ng-if="product.plan==2">Gold Plan</span>
-                  <span ng-if="product.plan==3">Platinum Plan</span>
-                  <span ng-if="product.plan==4">Diamond Plan</span>
-                </h5>
+              <td ng-if="product.status==3" class="plan-cart">
+                <div class="">
+                  <h4 class="text-capitalize plan-name m-center">{{product.subtype}}</h4>
+                  <h5 class="text-capitalize">
+                    <span class="block" ng-if="product.months == '1'">{{product.months}} month</span>
+                    <span class="block" ng-if="product.months != '1'">{{product.months}} months</span>
+                    <span ng-if="product.plan==1">Silver Plan</span>
+                    <span ng-if="product.plan==2">Gold Plan</span>
+                    <span ng-if="product.plan==3">Platinum Plan</span>
+                    <span ng-if="product.plan==4">Diamond Plan</span>
+                  </h5>
+                </div>
               </td>
               <td ng-if="product.status!=3">
                 <figure  class="pointer" ui-sref="productdetail({id:product.id})">
