--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -64,8 +64,9 @@
                         <div style="display:none">
                           {{subplan.plan | showplan}}
                         </div>
-                        <h4 ng-hide="{{subplan.plan | showplan}}">Plan already taken.</h4>
-                        <a ng-show="{{subplan.plan | showplan}}" class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.id)">take this plan</a>
+                        {{subplan.status}}
+                        <h4 ng-show="{{subplan.status || !subplan.status}}">Plan already taken.</h4>
+                        <a ng-show="{{subplan.status || subplan.status}}" class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.id)">take this plan</a>
                         <!-- <p ng-if="$index==0">Silver plan rates are only applicable for online consulation.</p> -->
                       </div>
                     </div>
