--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -56,6 +56,7 @@
       font-size: 18px;
     }
   }
+  .plan-cart { height: 220px; }
   // health-management weight-manangement
   .tab-chart {
     .nav-tabs li a { width: 124px; }
@@ -350,6 +351,7 @@
       text-align: center;
     }
   }
+    .plan-cart { height: 170px; }
   .tab-chart {
     .nav-tabs li a {
       width: 114px;
@@ -860,6 +862,14 @@
       font-size: 12px;
     }
   }
+    .plan-cart {
+      height: 148px;
+      .plan-name { font-size: 14px; }
+      h5 {
+        margin: 5px 0;
+        font-size: 12px;
+      }
+    }
   .healthchart-list {
     width: 451px;
     margin: 40px auto;
@@ -959,7 +969,7 @@
     .noconsult {
       @include square(35px);
       border: 2px solid $brand-primary;
-      font-size: 20px;
+      font-size: 17px;
       line-height: 30px;
       top: -15px;
     }
@@ -1487,6 +1497,14 @@
       }
     }
   }
+  .plan-cart {
+    height: 112px;
+    .plan-name { font-size: 12px; }
+    h5 {
+      margin: 3px 0;
+      font-size: 10px;
+    }
+  }
   .healthchart-list {
     width: auto;
     margin: 30px auto 20px;
@@ -1599,7 +1617,7 @@
     .noconsult {
       @include square(25px);
       border: 1px solid $brand-primary;
-      font-size: 14px;
+      font-size: 12px;
       line-height: 20px;
     }
     .month { margin: 17px 0 0; }
