--- a/views/content/account.html
+++ b/views/content/account.html
@@ -13,128 +13,188 @@
           <uib-tab>
             <uib-tab-heading><span class="text-uppercase tab-active pointer" ui-sref="account">my profile</span></uib-tab-heading>
             <div class="profile-tab">
-              <h3 class="text-uppercase brand-brown-dark letter-space">your details</h3>
-              <form action="" name="basicForm" class="form-inline details">
-                <div class="form-group">
-                  <input type="text" name="firstname" required placeholder="First Name *" ng-model="user.firstname" required class="form-control">
+              <div class="row">
+            		<div class="col-md-4">
+            			<div class="account-name">
+            				<form ng-submit="editProfile(1)">
+            					<button class="pull-right edit" type="submit">{{profile.nameemailedit}}</button>
+            					<p>Name:
+            						<span>{{user.name}}</span>
+            					</p>
+            					<p>Email:
+            						<span>{{user.email}}</span>
+            					</p>
+            					<p>Phone:
+            						<span>{{user.phone}}</span>
+            					</p>
+            					<div ng-show="profile.nameemailedit=='save'">
+            						<div class="form-group">
+            							<label>Name</label>
+            							<input class="form-control" ng-model="updateuser.user.name" type="text">
+            						</div>
+            						<div class="form-group">
+            							<label>Email</label>
+            							<input class="form-control" ng-model="updateuser.user.email" type="email">
+            						</div>
+            						<div class="form-group">
+            							<label>Phone</label>
+            							<input class="form-control" ng-model="updateuser.user.phone" type="tel">
+            						</div>
+            					</div>
+            				</form>
 
-                </div>
+            				<form ng-submit="">
+            					<button class="pull-right edit" ng-click="editProfile(2)" type="submit">{{profile.changepasswordedit}}</button>
+            					<h5 class="h5-class">CHANGE PASSWORD</h5>
+            					<div ng-if="profile.changepasswordedit=='save'">
+            						<div class="form-group">
+            							<label>Old Password</label>
+            							<input class="form-control" ng-model="password.oldpassword" required type="password">
+            						</div>
+            						<div class="form-group">
+            							<label>New Password</label>
+            							<input class="form-control" ng-model="password.newpassword" required type="password">
+            						</div>
+            						<div class="form-group">
+            							<label>Re-enter Password</label>
+            							<input class="form-control" ng-model="password.confirmpassword" required type="password">
+            						</div>
+            					</div>
+            				</form>
 
-                <div class="form-group">
-                  <input type="text" name="lastname" placeholder="Last Name *" ng-model="user.lastname" required class="form-control">
+            			</div>
+            		</div>
 
-                </div>
+            		<div class="col-md-offset-1 col-md-6">
+            			<div class="account-name">
+            				<form ng-submit="">
+            					<button class="pull-right edit" ng-click="editProfile(3)" type="submit">{{profile.billingaddressedit}}</button>
+            					<h5 class="h5-class mar0 class-p">BILLING ADDRESS</h5>
+            					<p>{{user.billingline1}}
+            						<br>{{user.billingline2}}
+            						<br>{{user.billingline3}}
+            						<br>{{user.billingcity}}  {{user.billingpincode}}
+            						<br>{{user.billingstate}}  {{user.billingcountry}}
+            					</p>
+            					<div ng-if="profile.billingaddressedit=='save'">
+            						<div class="form-group">
+            							<label>Line1*</label>
+            							<input class="form-control" ng-model="updateuser.user.billingline1" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)" type="text">
+            						</div>
+            						<div class="form-group">
+            							<label>Line2</label>
+            							<input class="form-control" ng-model="updateuser.user.billingline2" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)" type="text">
+            						</div>
+            						<div class="form-group">
+            							<label>Line3</label>
+            							<input class="form-control" ng-model="updateuser.user.billingline3" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)" type="text">
+            						</div>
 
-                <div class="form-group">
-                  <input type="tel" required placeholder="Mobile Number *" ng-model="user.phone" class="form-control">
-                </div>
-                <div class="form-group">
-                  <input type="email" required name="email" placeholder="Email *" ng-model="user.email" required class="form-control">
+            						<div class="row">
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>City*</label>
+            									<input class="form-control" ng-model="updateuser.user.billingcity" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)" type="text">
+            								</div>
+            							</div>
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>Pincode*</label>
+            									<input class="form-control" ng-model="updateuser.user.billingpincode" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)" type="text">
+            								</div>
+            							</div>
+            						</div>
 
-                </div>
+            						<div class="row">
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>State*</label>
+            									<input class="form-control" ng-model="updateuser.user.billingstate" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)" type="text">
+            								</div>
+            							</div>
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>Country*</label>
+            									<div class="fynx-select gray-select">
+            										<select ng-model="updateuser.user.billingcountry" ng-change="assign(sameasbilling,updateuser.user.billingline1,updateuser.user.billingline2,updateuser.user.billingline3,updateuser.user.billingcity,updateuser.user.billingpincode,updateuser.user.billingstate,updateuser.user.billingcountry)">
+            											<option value="{{country.value}}" ng-repeat="country in countries">{{country.value}}</option>
+            										</select>
+            										<span class="only-border"></span>
+            									</div>
+            								</div>
+            							</div>
+            						</div>
+            					</div>
+            				</form>
+            			</div>
 
-                <div class="form-group">
-                  <button class="btn btn-primary-inverse edit text-uppercase" type="button" ng-click="updateUser(selectedBillingCountry,selectedShippingCountry)">Edit</button>
-                </div>
-                <div class="text-center" ng-show="error">
-                  Please enter firstname,lastname and email
-                </div>
-              </form>
-              <div class="address">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h3 class="text-uppercase brand-brown-dark letter-space inline-block">billing address</h3>
-                    <button class="btn btn-primary-inverse text-uppercase edit" ng-click="updateUser(selectedBillingCountry,selectedShippingCountry)">Edit</button>
-                    <form action="">
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingline1" placeholder="Line 1 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingline2" placeholder="Line 2 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingline3" placeholder="Line 3 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingcity" placeholder="City *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingpincode" placeholder="Pincode *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingstate" placeholder="State *">
-                      </div>
-                      <div class="form-group">
-                        <div class="custom-select">
-                          <select ng-options="country as country.value for country in countries" ng-model="selectedBillingCountry" class="form-control">
-                          </select>
-                          <span></span>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="col-md-offset-2 col-md-4">
-                    <h3 class="text-uppercase brand-brown-dark letter-space inline-block">shipping address</h3>
-                    <button class="btn btn-primary-inverse text-uppercase edit" type="button" ng-click="updateUser(selectedBillingCountry,selectedShippingCountry)">edit</button>
-                    <div class="checkbox">
-                      <input type="checkbox" class="text-uppercase" ng-model='sameshipping' id="same">
-                      <label for="same" class="same-bill"> <span></span> Same as billing address</label>
-                    </div>
-                    <form action="" ng-show="sameshipping">
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingline1" placeholder="Line 1 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingline2" placeholder="Line 2 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingline3" placeholder="Line 3 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingcity" placeholder="City *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingpincode" placeholder="Pincode *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.billingstate" placeholder="State *">
-                      </div>
-                      <div class="form-group">
-                        <div class="custom-select">
-                          <select ng-options="country as country.value for country in countries" ng-model="selectedBillingCountry" class="form-control">
-                          </select>
-                        </div>
-                      </div>
-                    </form>
-                    <form action="" ng-hide="sameshipping">
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.shippingline1" placeholder="Line 1 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.shippingline2" placeholder="Line 2 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.shippingline3" placeholder="Line 3 *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.shippingcity" placeholder="City *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.shippingpincode" placeholder="Pincode *">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" ng-model="user.shippingstate" placeholder="State *">
-                      </div>
-                      <div class="form-group">
-                        <div class="custom-select">
-                          <select ng-options="country as country.value for country in countries" ng-model="selectedShippingCountry" class="form-control">
-                          </select>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-              </div>
+            			<div class="account-name">
+            				<form ng-submit="">
+            					<button class="pull-right edit" ng-click="editProfile(4)" type="submit">{{profile.shippingaddressedit}}</button>
+            					<h5 class="h5-class mar0 class-p">SHIPPING ADDRESS</h5>
+            					<p>{{user.shippingline1}}
+            						<br>{{user.shippingline2}}
+            						<br>{{user.shippingline3}}
+            						<br>{{user.shippingcity}}  {{user.shippingpincode}}
+            						<br>{{user.shippingstate}}  {{user.shippingcountry}}
+            					</p>
+            					<div ng-if="profile.shippingaddressedit=='save'">
+            						<div class="form-group i-check">
+            							<input type="checkbox" class="iagree" ng-model="sameasbilling" ng-change="sameAsBilling(sameasbilling)">Same as billing address
+            						</div>
+            						<div class="form-group">
+            							<label>Line1*</label>
+            							<input class="form-control" ng-model="updateuser.user.shippingline1" type="text">
+            						</div>
+            						<div class="form-group">
+            							<label>Line2</label>
+            							<input class="form-control" ng-model="updateuser.user.shippingline2" type="text">
+            						</div>
+            						<div class="form-group">
+            							<label>Line3</label>
+            							<input class="form-control" ng-model="updateuser.user.shippingline3" type="text">
+            						</div>
+
+            						<div class="row">
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>City*</label>
+            									<input class="form-control" ng-model="updateuser.user.shippingcity" type="text">
+            								</div>
+            							</div>
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>Pincode*</label>
+            									<input class="form-control" ng-model="updateuser.user.shippingpincode" type="text">
+            								</div>
+            							</div>
+            						</div>
+
+            						<div class="row">
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>State*</label>
+            									<input class="form-control" ng-model="updateuser.user.shippingstate" type="text">
+            								</div>
+            							</div>
+            							<div class="col-md-6">
+            								<div class="form-group">
+            									<label>Country*</label>
+            									<div class="fynx-select gray-select">
+            										<select ng-model="updateuser.user.shippingcountry">
+            											<option value="{{country.value}}" ng-repeat="country in countries">{{country.value}}</option>
+            										</select>
+            										<span class="only-border"></span>
+            									</div>
+            								</div>
+            							</div>
+            						</div>
+            					</div>
+            				</form>
+            			</div>
+
+            		</div>
+            	</div>
             </div>
           </uib-tab>
           <uib-tab>
