--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -114,13 +114,13 @@
           <p>sign up via</p>
         </div>
         <div class="social-btn text-center">
-          <div class="btn-round inline-block">
+          <div class="btn-round inline-block" ng-click="facebookLogin()">
             <button type="button" class="btn fb-btn round no-border">
               <i class="fa fa-facebook"></i>
             </button>
           </div>
           <div class="btn-round inline-block">
-            <button type="button" class="btn google-btn round no-border">
+            <button type="button" class="btn google-btn round no-border" ng-click="googleLogin()">
               <i class="fa fa-google-plus"></i>
             </button>
           </div>
