--- a/views/content/recipes.html
+++ b/views/content/recipes.html
@@ -14,14 +14,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <div class="recipe-imgholder round">
-            <img src="img/recipes/baingan.jpg" alt="">
+          <div class="recipe-imgholder ">
+            <img src="img/recipes/baingan.jpg" alt="" class="round img-responsive">
           </div>
           <div class="recipe-slider">
             <flex-slider class="carousel" flex-slide="slide in recipe track by $index" animation="slide" item-width="90" item-margin="15" Control-Nav="false">
               <li>
-                <div class="recipe-category round">
-                  <img ng-src="{{slide}}" alt="" class="img-responsive">
+                <div class="recipe-category ">
+                  <img ng-src="{{slide}}" alt="" class="img-responsive round">
                 </div>
               </li>
             </flex-slider>
