--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -67,12 +67,12 @@
         </div>
         <div class="social-btn text-center">
           <div class="btn-round inline-block">
-            <button type="button" class="btn fb-btn no-border round">
+            <button type="button" class="btn fb-btn no-border round" ng-click="facebookLogin()">
               <i class="fa fa-facebook"></i>
             </button>
           </div>
           <div class="btn-round inline-block">
-            <button type="button" class="btn google-btn no-border round">
+            <button type="button" class="btn google-btn no-border round" ng-click="googleLogin()">
               <i class="fa fa-google-plus"></i>
             </button>
           </div>
