--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -113,7 +113,7 @@
   a {
     color: #cf5636;
   }
-  .name {
+  .show-submenu {
     &:hover .account-submenu {
       display: block;
     }
@@ -124,7 +124,7 @@
     display: none;
     position: absolute;
     top: auto;
-    left: 30px;
+    left: 0px;
     background-color: #fff;
     text-align: left;
     z-index: 1;
