--- a/views/header.html
+++ b/views/header.html
@@ -52,19 +52,20 @@
               <a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i></a>
               <div class="bagde round"><span class="white">15</span></div>
             </div>
-          <div class="user-login">
+            <div class="user-login">
               <div class="signin letter-space text-right" ng-show="!enablelogout">
-              <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
-            </div>
-            <div class="signin letter-space text-right" ng-show="enablelogout">
-              <div class="text-uppercase font-semibold relate name brand-primary pointer">Jagruti
-                <ul class="account-submenu">
-                  <li><a ui-sref="account()" class="text-uppercase font-semibold">My profile</a></li>
-                  <li><a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a></li>
-                </ul>
+                <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
+              </div>
+              <div class="signin letter-space text-right" ng-show="enablelogout">
+                <div class="text-uppercase font-semibold relate pointer show-submenu">
+                  <span class="block name brand-primary ">Jagruti</span>
+                  <ul class="account-submenu">
+                    <li><a ui-sref="account()" class="text-uppercase font-semibold">My profile</a></li>
+                    <li><a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
           </div>
         </div>
         <!-- <div class="col-md-6 col-sm-12 col-xs-12 visible-xs">
